feat: migrate to standalone cluster-per-app

--- a/kubernetes/apps/base/downloads/bazarr/app/externalsecret.yaml
+++ b/kubernetes/apps/base/downloads/bazarr/app/externalsecret.yaml
@@ -5,32 +5,17 @@ kind: ExternalSecret
 metadata:
   name: &name bazarr-secret
 spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
   target:
     name: *name
     template:
       data:
-        # App
         BAZARR__API_KEY: '{{ .BAZARR_API_KEY }}'
         PLEX_TOKEN: "{{ .PLEX_API_KEY }}"
-        # Database
-        POSTGRES_ENABLED: "true"
-        POSTGRES_DATABASE: '{{ .dbname }}'
-        POSTGRES_HOST: '{{ index . "pgbouncer-host" }}'
-        POSTGRES_USERNAME: '{{ .user }}'
-        POSTGRES_PASSWORD: '{{ .password }}'
   dataFrom:
   - extract:
       key: bazarr
-    sourceRef: &onepass
-       storeRef:
-         kind: ClusterSecretStore
-         name: onepassword
   - extract:
       key: plex
-    sourceRef: *onepass
-  - extract:
-      key: postgres-pguser-bazarr
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: crunchy-postgres
