--- a/kubernetes/apps/base/downloads/dashbrr/externalsecret.yaml
+++ b/kubernetes/apps/base/downloads/dashbrr/externalsecret.yaml
@@ -5,6 +5,9 @@ kind: ExternalSecret
 metadata:
   name: &name dashbrr-secret
 spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
   target:
     name: *name
     template:
@@ -21,41 +24,18 @@ spec:
         OIDC_CLIENT_ID: "{{ .DASHBRR_CLIENT_ID }}"
         OIDC_CLIENT_SECRET: "{{ .DASHBRR_CLIENT_SECRET }}"
         OIDC_REDIRECT_URL: "https://dashbrr.${SECRET_DOMAIN}/api/auth/callback"
-        # Database
-        DASHBRR__DB_TYPE: postgres
-        DASHBRR__DB_NAME: '{{ .dbname }}'
-        DASHBRR__DB_HOST: '{{ index . "pgbouncer-host" }}'
-        DASHBRR__DB_PORT: '{{ index . "pgbouncer-port" }}'
-        DASHBRR__DB_USER: '{{ .user }}'
-        DASHBRR__DB_PASSWORD: '{{ .password }}'
   dataFrom:
   - extract:
       key: radarr
-    sourceRef: &onepass
-       storeRef:
-         kind: ClusterSecretStore
-         name: onepassword
   - extract:
       key: sonarr
-    sourceRef: *onepass
   - extract:
       key: prowlarr
-    sourceRef: *onepass
   - extract:
       key: jellyseerr
-    sourceRef: *onepass
   - extract:
       key: maintainerr
-    sourceRef: *onepass
   - extract:
       key: plex
-    sourceRef: *onepass
   - extract:
       key: dashbrr
-    sourceRef: *onepass
-  - extract:
-      key: postgres-pguser-dashbrr
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: crunchy-postgres
