--- a/kubernetes/apps/base/downloads/radarr/externalsecret.yaml
+++ b/kubernetes/apps/base/downloads/radarr/externalsecret.yaml
@@ -5,28 +5,14 @@ kind: ExternalSecret
 metadata:
   name: &name radarr-secret
 spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
   target:
     name: *name
     template:
       data:
-        # App
         RADARR__AUTH__APIKEY: "{{ .RADARR_API_KEY }}"
-        # Database
-        RADARR__POSTGRES__HOST: '{{ index . "pgbouncer-host" }}'
-        RADARR__POSTGRES__PORT: '{{ index . "pgbouncer-port" }}'
-        RADARR__POSTGRES__USER: '{{ .user }}'
-        RADARR__POSTGRES__PASSWORD: '{{ .password }}'
-        RADARR__POSTGRES__MAINDB: '{{ .dbname }}'
   dataFrom:
   - extract:
       key: radarr
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: onepassword
-  - extract:
-      key: postgres-pguser-radarr
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: crunchy-postgres
