--- a/kubernetes/apps/base/media/jellyseerr/externalsecret.yaml
+++ b/kubernetes/apps/base/media/jellyseerr/externalsecret.yaml
@@ -5,29 +5,14 @@ kind: ExternalSecret
 metadata:
   name: &name jellyseerr-secret
 spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
   target:
     name: *name
     template:
       data:
-        # App
         API_KEY: "{{ .JELLYSEERR_API_KEY }}"
-        # Database
-        DB_TYPE: "postgres"
-        DB_HOST: '{{ index . "pgbouncer-host" }}'
-        DB_PORT: '{{ index . "pgbouncer-port" }}'
-        DB_USER: '{{ .user }}'
-        DB_PASS: '{{ .password }}'
-        DB_NAME: '{{ .dbname }}'
   dataFrom:
   - extract:
       key: jellyseerr
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: onepassword
-  - extract:
-      key: postgres-pguser-jellyseerr
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: crunchy-postgres
