--- a/kubernetes/apps/base/media/kyoo/externalsecret.yaml
+++ b/kubernetes/apps/base/media/kyoo/externalsecret.yaml
@@ -5,6 +5,9 @@ kind: ExternalSecret
 metadata:
   name: &name kyoo-secret
 spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
   target:
     name: *name
     template:
@@ -23,9 +26,6 @@ spec:
         # OIDC
         OIDC_AUTHENTIK_CLIENTID: '{{ .KYOO_CLIENT_ID }}'
         OIDC_AUTHENTIK_SECRET: '{{ .KYOO_CLIENT_SECRET }}'
-        # Database
-        POSTGRES_USER: '{{ .user }}'
-        POSTGRES_PASSWORD: '{{ .password }}'
   dataFrom:
   - extract:
       key: kyoo
