--- a/kubernetes/apps/base/media/kyoo/helmrelease.yaml
+++ b/kubernetes/apps/base/media/kyoo/helmrelease.yaml
@@ -31,9 +31,9 @@ spec:
         kyoo_back:
           host: &host postgres-pgbouncer.database.svc
           kyoo_migrations: &psql
-            userKey: POSTGRES_USER
-            passwordKey: POSTGRES_PASSWORD
-            existingSecret: *secret
+            userKey: user
+            passwordKey: password
+            existingSecret: kyoo-postgres-pguser-kyoo-all
           kyoo_back: *psql
         kyoo_transcoder:
           host: *host
