--- a/kubernetes/apps/base/self-hosted/lubelog/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelog/externalsecret.yaml
@@ -5,6 +5,9 @@ kind: ExternalSecret
 metadata:
   name: &name lubelog-secret
 spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
   target:
     name: *name
     template:
@@ -22,13 +25,3 @@ spec:
   dataFrom:
   - extract:
       key: lubelog
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: onepassword
-  - extract:
-      key: postgres-pguser-lubelog
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: crunchy-postgres
