--- a/kubernetes/apps/base/self-hosted/paperless/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/paperless/externalsecret.yaml
@@ -5,6 +5,9 @@ kind: ExternalSecret
 metadata:
   name: &name paperless-secret
 spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
   target:
     name: *name
     template:
@@ -29,23 +32,6 @@ spec:
                 ]
             }
           }
-        # Database
-        PAPERLESS_DBENGINE: postgresql
-        PAPERLESS_DBPORT: '{{ index . "pgbouncer-port" }}'
-        PAPERLESS_DBNAME: '{{ .dbname }}'
-        PAPERLESS_DBHOST: '{{ index . "pgbouncer-host" }}'
-        PAPERLESS_DBUSER: '{{ .user }}'
-        PAPERLESS_DBPASS: '{{ .password }}'
   dataFrom:
   - extract:
        key: paperless
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: onepassword
-  - extract:
-       key: postgres-pguser-paperless
-    sourceRef:
-       storeRef:
-          name: crunchy-postgres
-          kind: ClusterSecretStore
