--- a/kubernetes/apps/main/observability/grafana/ks.yaml
+++ b/kubernetes/apps/main/observability/grafana/ks.yaml
@@ -46,9 +46,19 @@ spec:
         name: grafana
       spec:
         values:
+          env:
+            GF_DATABASE_HOST: grafana-postgres-pgbouncer.observability.svc
+            GF_DATABASE_NAME: grafana
+            GF_DATABASE_PASSWORD:
+              valueFrom:
+                secretKeyRef:
+                  name: grafana-postgres-pguser-grafana
+                  key: password
+            GF_DATABASE_SSL_MODE: require
+            GF_DATABASE_TYPE: postgres
+            GF_DATABASE_USER: grafana
           envFromSecrets:
             - name: grafana-secret
-            - name: grafana-pg-secret
           ingress:
             annotations:
               gethomepage.dev/enabled: "true"
