--- a/kubernetes/apps/main/security/authentik/ks.yaml
+++ b/kubernetes/apps/main/security/authentik/ks.yaml
@@ -32,6 +32,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: sso
+      POOL_MODE: transaction
   prune: true
   retryInterval: 2m
   sourceRef:
