--- a/kubernetes/apps/base/downloads/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/bazarr/app/helmrelease.yaml
@@ -31,6 +31,15 @@ spec:
               tag: 1.5.1@sha256:7c78433195385b7e6758245461ef9e33f4bbeb1d10bd48ba39ba9ebd215e68e8
             env:
               TZ: ${TIMEZONE}
+              POSTGRES_DATABASE: *app
+              POSTGRES_ENABLED: "true"
+              POSTGRES_HOST: bazarr-postgres-pgbouncer.downloads.svc
+              POSTGRES_USERNAME: *app
+              POSTGRES_PASSWORD:
+                valueFrom:
+                  secretKeyRef:
+                    name: bazarr-postgres-pguser-bazarr
+                    key: password
             envFrom:
             - secretRef:
                 name: bazarr-secret
