--- a/kubernetes/apps/base/downloads/dashbrr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/dashbrr/helmrelease.yaml
@@ -31,6 +31,16 @@ spec:
               # tag: v0.2.0@sha256:b3b898d4bf9b463bf802e7af188de45e6ca08eb96e828b4e9cbfde6e418441ad
             env:
               DASHBRR__CONFIG_PATH: /config/config.toml
+              DASHBRR__DB_TYPE: postgres
+              DASHBRR__DB_NAME: *app
+              DASHBRR__DB_HOST: dashbrr-postgres-pgbouncer.downloads.svc
+              DASHBRR__DB_USER: *app
+              DASHBRR__DB_PASSWORD:
+                valueFrom:
+                  secretKeyRef:
+                    name: dashbrr-postgres-pguser-dashbrr
+                    key: password
+              DASHBRR__DB_PORT: "5432"
               DASHBRR__DB_PATH: /cache/._  # cache path is derived from DASHBRR__DB_PATH
               DASHBRR__LISTEN_ADDR: 0.0.0.0:8080
               GIN_MODE: debug
