--- a/kubernetes/apps/base/media/jellyseerr/helmrelease.yaml
+++ b/kubernetes/apps/base/media/jellyseerr/helmrelease.yaml
@@ -28,6 +28,16 @@ spec:
               repository: ghcr.io/fallenbagel/jellyseerr
               tag: 2.3.0@sha256:df53a7b06006e9da117a7072a55cf5d8b2071a6272f6bb329d8ca62b6f5c08a6
             env:
+              DB_TYPE: "postgres"
+              DB_HOST: jellyseerr-postgres-pgbouncer.media.svc
+              DB_PORT: "5432"
+              DB_USER: *app
+              DB_PASS:
+                valueFrom:
+                  secretKeyRef:
+                    name: jellyseerr-postgres-pguser-jellyseerr
+                    key: password
+              DB_NAME: *app
               TZ: ${TIMEZONE}
             envFrom:
               - secretRef:
