--- a/kubernetes/apps/main/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/main/self-hosted/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - ./atuin/ks.yaml
   - ./echo/ks.yaml
   - ./homepage/ks.yaml
-  - ./lubelog/ks.yaml
+  # - ./lubelog/ks.yaml
   - ./paperless/ks.yaml
   - ./redlib/ks.yaml
   - ./wyze-bridge/ks.yaml
