--- a/kubernetes/apps/base/self-hosted/lubelog/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelog/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name lubelog-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword
   target:
     name: *name
     template:
@@ -20,6 +17,18 @@ spec:
         OpenIDConfig__TokenURL: https://sso.${SECRET_DOMAIN}/application/o/token/
         OpenIDConfig__RedirectURL: https://lubelog.${SECRET_DOMAIN}/Login/RemoteAuth
         OpenIDConfig__Scope: email
+        # Database
+        POSTGRES_CONNECTION: 'Host={{ index . "pgbouncer-host" }}:{{ .port }};Username={{ .user }};Password={{ .password }};Database={{ .dbname }}'
   dataFrom:
   - extract:
       key: lubelog
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword
+  - extract:
+      key: postgres-pguser-lubelog
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: crunchy-postgres
