--- a/kubernetes/apps/base/self-hosted/lubelog/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelog/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
               TZ: ${TIMEZONE}
             envFrom:
               - secretRef:
-                  name: "{{ .Release.Name }}-secret"
+                  name: lubelog-secret
             resources:
               requests:
                 cpu: 15m
@@ -66,7 +66,7 @@ spec:
           gethomepage.dev/widget.username: "{{ `{{HOMEPAGE_VAR_LUBELOG_USERNAME}}` }}"
           gethomepage.dev/widget.password: "{{ `{{HOMEPAGE_VAR_LUBELOG_PASSWORD}}` }}"
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - host: lubelog.${SECRET_DOMAIN}
             paths:
               - path: /
                 pathType: Prefix
