--- a/kubernetes/apps/base/security/authentik/helmrelease.yaml
+++ b/kubernetes/apps/base/security/authentik/helmrelease.yaml
@@ -28,21 +28,21 @@ spec:
       deploymentStrategy:
         type: RollingUpdate
       env:
-        - AUTHENTIK_POSTGRESQL__NAME:
-            value: *app
-        - AUTHENTIK_POSTGRESQL__HOST:
-            value: authentik-postgres-pgbouncer.security.svc #Authentik requires transaction for pgBouncer
-        - AUTHENTIK_POSTGRESQL__USER:
-            value: *app
-        - AUTHENTIK_POSTGRESQL__PASSWORD:
-            valueFrom:
-              secretKeyRef:
-                name: authentik-postgres-pguser-authentik
-                key: password
-        - AUTHENTIK_POSTGRESQL__USE_PGBOUNCER:
-            value: true
-        - AUTHENTIK_POSTGRESQL__SSLMODE:
-            value: require
+        - name: AUTHENTIK_POSTGRESQL__NAME
+          value: *app
+        - name: AUTHENTIK_POSTGRESQL__HOST
+          value: authentik-postgres-pgbouncer.security.svc #Authentik requires transaction for pgBouncer
+        - name: AUTHENTIK_POSTGRESQL__USER
+          value: *app
+        - name: AUTHENTIK_POSTGRESQL__PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: authentik-postgres-pguser-authentik
+              key: password
+        - name: AUTHENTIK_POSTGRESQL__USE_PGBOUNCER
+          value: "true"
+        - name: AUTHENTIK_POSTGRESQL__SSLMODE
+          value: require
       envFrom:
         - secretRef:
             name: authentik-secret
