--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -72,14 +72,14 @@ spec:
         # Minio
         repo1-block: "y"
         repo1-bundle: "y"
-        repo1-path: /pgbackrest/${APP}
+        repo1-path: /${APP}
         repo1-retention-full: "30" # days
         repo1-retention-full-type: "time"
         repo1-s3-uri-style: path
         # R2
         repo2-block: "y"
         repo2-bundle: "y"
-        repo2-path: /pgbackrest/${APP}
+        repo2-path: /${APP}
         repo2-retention-full: "7" # days
         repo2-retention-full-type: time
         repo2-s3-uri-style: path
