feat: update naming

--- a/kubernetes/apps/base/downloads/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/bazarr/app/helmrelease.yaml
@@ -33,12 +33,12 @@ spec:
               TZ: ${TIMEZONE}
               POSTGRES_DATABASE: *app
               POSTGRES_ENABLED: "true"
-              POSTGRES_HOST: bazarr-postgres-pgbouncer.downloads.svc
+              POSTGRES_HOST: bazarr-pgbouncer.downloads.svc
               POSTGRES_USERNAME: *app
               POSTGRES_PASSWORD:
                 valueFrom:
                   secretKeyRef:
-                    name: bazarr-postgres-pguser-bazarr
+                    name: bazarr-pguser-bazarr
                     key: password
             envFrom:
             - secretRef:
