--- a/kubernetes/apps/base/downloads/dashbrr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/dashbrr/helmrelease.yaml
@@ -33,12 +33,12 @@ spec:
               DASHBRR__CONFIG_PATH: /config/config.toml
               DASHBRR__DB_TYPE: postgres
               DASHBRR__DB_NAME: *app
-              DASHBRR__DB_HOST: dashbrr-postgres-pgbouncer.downloads.svc
+              DASHBRR__DB_HOST: dashbrr-pgbouncer.downloads.svc
               DASHBRR__DB_USER: *app
               DASHBRR__DB_PASSWORD:
                 valueFrom:
                   secretKeyRef:
-                    name: dashbrr-postgres-pguser-dashbrr
+                    name: dashbrr-pguser-dashbrr
                     key: password
               DASHBRR__DB_PORT: "5432"
               DASHBRR__DB_PATH: /cache/._  # cache path is derived from DASHBRR__DB_PATH
