--- a/kubernetes/apps/base/downloads/readarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/readarr/helmrelease.yaml
@@ -37,13 +37,13 @@ spec:
               # READARR__LOG__DBENABLED: "False"
               READARR__LOG__LEVEL: info
               READARR__POSTGRES__CACHEDB: readarr_cache
-              READARR__POSTGRES__HOST: readarr-postgres-pgbouncer.downloads.svc
+              READARR__POSTGRES__HOST: readarr-pgbouncer.downloads.svc
               READARR__POSTGRES__LOGDB: readarr_log
               READARR__POSTGRES__MAINDB: *app
               READARR__POSTGRES__PASSWORD:
                 valueFrom:
                   secretKeyRef:
-                    name: readarr-postgres-pguser-readarr
+                    name: readarr-pguser-readarr
                     key: password
               READARR__POSTGRES__PORT: "5432"
               READARR__POSTGRES__USER: *app
