--- a/kubernetes/apps/base/media/kyoo/helmrelease.yaml
+++ b/kubernetes/apps/base/media/kyoo/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
           kyoo_migrations: &psql_secret
             userKey: user
             passwordKey: password
-            existingSecret: kyoo-postgres-pguser-kyoo-all
+            existingSecret: kyoo-pguser-kyoo-all
           kyoo_back: *psql_secret
         kyoo_transcoder:
           host: *host
