--- a/kubernetes/apps/base/security/authentik/helmrelease.yaml
+++ b/kubernetes/apps/base/security/authentik/helmrelease.yaml
@@ -31,13 +31,13 @@ spec:
         - name: AUTHENTIK_POSTGRESQL__NAME
           value: *app
         - name: AUTHENTIK_POSTGRESQL__HOST
-          value: authentik-postgres-pgbouncer.security.svc #Authentik requires transaction for pgBouncer
+          value: authentik-pgbouncer.security.svc #Authentik requires transaction for pgBouncer
         - name: AUTHENTIK_POSTGRESQL__USER
           value: *app
         - name: AUTHENTIK_POSTGRESQL__PASSWORD
           valueFrom:
             secretKeyRef:
-              name: authentik-postgres-pguser-authentik
+              name: authentik-pguser-authentik
               key: password
         - name: AUTHENTIK_POSTGRESQL__USE_PGBOUNCER
           value: "true"
