--- a/kubernetes/apps/base/self-hosted/atuin/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/atuin/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
               ATUIN_DB_URI:
                 valueFrom:
                   secretKeyRef:
-                    name: atuin-postgres-pguser-atuin
+                    name: atuin-pguser-atuin
                     key: pgbouncer-uri
               ATUIN_HOST: 0.0.0.0
               ATUIN_PORT: &port 80
