--- a/kubernetes/apps/base/self-hosted/lubelog/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/lubelog/externalsecret.yaml
@@ -27,7 +27,7 @@ spec:
          kind: ClusterSecretStore
          name: onepassword
   - extract:
-      key: postgres-pguser-lubelog
+      key: pguser-lubelog
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
