--- a/kubernetes/apps/base/self-hosted/paperless/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/paperless/helmrelease.yaml
@@ -45,12 +45,12 @@ spec:
               PAPERLESS_DBENGINE: postgresql
               PAPERLESS_DBPORT: "5432"
               PAPERLESS_DBNAME: *app
-              PAPERLESS_DBHOST: paperless-postgres-pgbouncer.self-hosted.svc
+              PAPERLESS_DBHOST: paperless-pgbouncer.self-hosted.svc
               PAPERLESS_DBUSER: *app
               PAPERLESS_DBPASS:
                 valueFrom:
                   secretKeyRef:
-                    name: paperless-postgres-pguser-paperless
+                    name: paperless-pguser-paperless
                     key: password
               # Remote User Auth
               PAPERLESS_ACCOUNT_ALLOW_SIGNUPS: "false"
