--- a/kubernetes/apps/main/observability/gatus/ks.yaml
+++ b/kubernetes/apps/main/observability/gatus/ks.yaml
@@ -55,7 +55,7 @@ spec:
                       POSTGRES_URI:
                         valueFrom:
                           secretKeyRef:
-                            name: gatus-postgres-pguser-gatus
+                            name: gatus-pguser-gatus
                             key: pgbouncer-uri
             ingress:
               app:
