--- a/kubernetes/apps/base/database/crunchy-postgres/cluster/gatus.yaml
+++ b/kubernetes/apps/base/database/crunchy-postgres/cluster/gatus.yaml
@@ -10,7 +10,7 @@ data:
     endpoints:
       - name: crunchy-pgo
         group: infrastructure
-        url: tcp://postgres-pgbouncer.database.svc.cluster.local:5432
+        url: tcp://pgbouncer.database.svc.cluster.local:5432
         interval: 1m
         conditions: ["[CONNECTED] == true"]
         alerts: [{ type: discord }]
