--- a/kubernetes/apps/base/downloads/prowlarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/prowlarr/helmrelease.yaml
@@ -36,12 +36,12 @@ spec:
               PROWLARR__AUTH__REQUIRED: DisabledForLocalAddresses
               PROWLARR__LOG__DBENABLED: "False"
               PROWLARR__LOG__LEVEL: info
-              PROWLARR__POSTGRES__HOST: prowlarr-postgres-pgbouncer.downloads.svc
+              PROWLARR__POSTGRES__HOST: prowlarr-pgbouncer.downloads.svc
               PROWLARR__POSTGRES__MAINDB: *app
               PROWLARR__POSTGRES__PASSWORD:
                 valueFrom:
                   secretKeyRef:
-                    name: prowlarr-postgres-pguser-prowlarr
+                    name: prowlarr-pguser-prowlarr
                     key: password
               PROWLARR__POSTGRES__PORT: "5432"
               PROWLARR__POSTGRES__USER: *app
