--- a/kubernetes/apps/main/observability/grafana/ks.yaml
+++ b/kubernetes/apps/main/observability/grafana/ks.yaml
@@ -47,7 +47,7 @@ spec:
       spec:
         values:
           env:
-            GF_DATABASE_HOST: grafana-postgres-pgbouncer.observability.svc
+            GF_DATABASE_HOST: grafana-pgbouncer.observability.svc
             GF_DATABASE_NAME: grafana
             GF_DATABASE_SSL_MODE: require
             GF_DATABASE_TYPE: postgres
@@ -57,7 +57,7 @@ spec:
           envValueFrom:
             GF_DATABASE_PASSWORD:
               secretKeyRef:
-                name: grafana-postgres-pguser-grafana
+                name: grafana-pguser-grafana
                 key: password
           ingress:
             annotations:
