fix: kyoo service

--- a/kubernetes/apps/base/media/kyoo/helmrelease.yaml
+++ b/kubernetes/apps/base/media/kyoo/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
         infra:
           user: kyoo-all
         kyoo_back:
-          host: &host kyoo-postgres-primary.media.svc
+          host: &host kyoo-primary.media.svc
           port: &port 5432
           database: kyoo_back
           kyoo_migrations: &psql_secret
