feat: migrate pvc type

--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -30,8 +30,8 @@ spec:
           app.kubernetes.io/name: ${APP}-crunchy-postgres
       replicas: &replicas 2
       dataVolumeClaimSpec:
-        storageClassName: ceph-filesystem
-        accessModes: ["ReadWriteMany"]
+        storageClassName: ceph-block
+        accessModes: ["ReadWriteOnce"]
         resources:
           requests:
             storage: 5Gi
