--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -71,12 +71,12 @@ spec:
         repo1-retention-full-type: "time"
         repo1-s3-uri-style: path
         # R2
-        repo2-block: "y"
-        repo2-bundle: "y"
-        repo2-path: /${APP}
-        repo2-retention-full: "7" # days
-        repo2-retention-full-type: time
-        repo2-s3-uri-style: path
+        # repo2-block: "y"
+        # repo2-bundle: "y"
+        # repo2-path: /${APP}
+        # repo2-retention-full: "7" # days
+        # repo2-retention-full-type: time
+        # repo2-s3-uri-style: path
       manual:
         repoName: repo1
         options:
