--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -71,12 +71,12 @@ spec:
         repo1-retention-full-type: "time"
         repo1-s3-uri-style: path
         # R2
-        # repo2-block: "y"
-        # repo2-bundle: "y"
-        # repo2-path: /${APP}
-        # repo2-retention-full: "7" # days
-        # repo2-retention-full-type: time
-        # repo2-s3-uri-style: path
+        repo2-block: "y"
+        repo2-bundle: "y"
+        repo2-path: /${APP}
+        repo2-retention-full: "7" # days
+        repo2-retention-full-type: time
+        repo2-s3-uri-style: path
       manual:
         repoName: repo1
         options:
@@ -94,14 +94,14 @@ spec:
             full: "30 1 * * 0" # Sunday at 01:30
             differential: "30 1 * * 1-6" # Mon-Sat at 01:30
             incremental: "30 3-23 * * *" # Every hour except 01:30-2:30
-        # - name: repo2
-        #   s3:
-        #     bucket: crunchy-pgo
-        #     endpoint: ${R2_ENDPOINT}
-        #     region: us-east-1 #https://developers.cloudflare.com/r2/api/s3/api/#bucket-region
-        #   schedules:
-        #     full: "30 2 * * 0" # Sunday at 02:30
-        #     incremental: "30 2 * * 1-6/2" # Mon-Sat at 02:30, every 2nd day
+        - name: repo2
+          s3:
+            bucket: crunchy-pgo
+            endpoint: ${R2_ENDPOINT}
+            region: us-east-1 #https://developers.cloudflare.com/r2/api/s3/api/#bucket-region
+          schedules:
+            full: "30 2 * * 0" # Sunday at 02:30
+            incremental: "30 2 * * 1-6/2" # Mon-Sat at 02:30, every 2nd day
   dataSource:
     pgbackrest:
       stanza: db
