--- a/kubernetes/components/postgres/externalsecret.yaml
+++ b/kubernetes/components/postgres/externalsecret.yaml
@@ -17,12 +17,12 @@ spec:
           [global]
           repo1-s3-key={{ .AWS_ACCESS_KEY_ID }}
           repo1-s3-key-secret={{ .AWS_SECRET_ACCESS_KEY }}
-          # repo2-s3-key={{ .R2_ACCESS_KEY_ID }}
-          # repo2-s3-key-secret={{ .R2_SECRET_ACCESS_KEY }}
+          repo2-s3-key={{ .R2_ACCESS_KEY_ID }}
+          repo2-s3-key-secret={{ .R2_SECRET_ACCESS_KEY }}
         encryption.conf: |
           [global]
           repo1-cipher-pass={{ .CRUNCHY_PGO_CIPHER_PASS }}
-          # repo2-cipher-pass={{ .CRUNCHY_PGO_CIPHER_PASS }}
+          repo2-cipher-pass={{ .CRUNCHY_PGO_CIPHER_PASS }}
   dataFrom:
     - extract:
         key: cloudflare
