chore: add renovate groups for helmfile and flux ocirepositories

--- a/.github/renovate/groups.json5
+++ b/.github/renovate/groups.json5
@@ -5,7 +5,16 @@
       "description": ["Actions Runner Controller Group"],
       "groupName": "Actions Runner Controller",
       "matchDatasources": ["docker", "helm"],
-      "matchPackageNames": ["/gha-runner-scale-set/"],
+      "matchPackageNames": ["/gha-runner-scale-set-controller/", "/gha-runner-scale-set/"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group"
+      }
+    },
+    {
+      "description": ["CoreDNS Group"],
+      "groupName": "CoreDNS",
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["/coredns/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -15,6 +24,15 @@
       "groupName": "Dragonfly Operator",
       "matchDatasources": ["docker", "github-releases"],
       "matchPackageNames": ["/dragonfly/"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group"
+      }
+    },
+    {
+      "description": ["External Secrets Operator Group"],
+      "groupName": "External Secrets Operator",
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["/external-secrets/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -32,7 +50,7 @@
       "description": ["Intel Device Plugins Group"],
       "groupName": "Intel-Device-Plugins",
       "matchDatasources": ["helm"],
-      "matchPackageNames": ["/intel-device-plugins/"],
+      "matchPackageNames": ["/intel-device-plugins-operator/", "/intel-device-plugins-gpu/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -59,7 +77,16 @@
       "description": ["System Upgrade Controller Group"],
       "groupName": "System Upgrade Controller",
       "matchDatasources": ["docker", "github-releases"],
-      "matchPackageNames": ["/system-upgrade-controller/"],
+      "matchPackageNames": ["/rook-ceph/", "/rook-ceph-cluster/"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group"
+      }
+    },
+    {
+      "description": ["Spegel Group"],
+      "groupName": "Spegel",
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["/spegel/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
