--- a/kubernetes/apps/utility/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/apps/utility/flux-system/flux-operator/ks.yaml
@@ -8,6 +8,11 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: *app
+      namespace: &namespace flux-system
   interval: 1h
   path: ./kubernetes/apps/base/flux-system/flux-operator
   prune: true
@@ -15,6 +20,5 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
-  wait: false
