--- a/kubernetes/clusters/main/flux-instance.yaml
+++ b/kubernetes/clusters/main/flux-instance.yaml
@@ -9,7 +9,10 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  interval: 30m
+  dependsOn:
+    - name: flux-operator
+      namespace: *namespace
+  interval: 1h
   path: ./kubernetes/clusters/main/flux-instance
   prune: true
   sourceRef:
