fix: narrow down frequencies.

--- a/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
@@ -32,13 +32,13 @@ spec:
               FEED_ID: LILDRUNKENSMURF-ACARS-1
               TZ: ${TIMEZONE}
               SOAPYSDR: driver=rtlsdr
-              # FREQUENCIES: "130.025;130.450;131.550;131.725"
+              FREQUENCIES: 130.425;130.850;131.475;131.550;131.725
               # Enabling all frequencies to determine which are actually used
               # RTL-SDR can only scan 2MHz range
               # See https://app.airframes.io/about
-              FREQUENCIES: >-
-                130.025;130.425;130.450;130.825;130.850;131.125;131.425;
-                131.450;131.475;131.525;131.550;131.725;131.825;131.850
+              # FREQUENCIES: >-
+              #   130.025;130.425;130.450;130.825;130.850;131.125;131.425;
+              #   131.450;131.475;131.525;131.550;131.725;131.825;131.850
               OUTPUT_SERVER: acars-acarsrouter
               OUTPUT_SERVER_PORT: "5550"
               OUTPUT_SERVER_MODE: tcp
