--- a/kubernetes/apps/base/actions-runner-system/actions-runner-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/base/actions-runner-system/actions-runner-controller/app/helmrelease.yaml
@@ -1,4 +1,14 @@
 ---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: actions-runner-controller
+spec:
+  type: oci
+  interval: 30m
+  url: oci://ghcr.io/actions/actions-runner-controller-charts
+---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
