--- a/.github/workflows/nas-restart.yaml
+++ b/.github/workflows/nas-restart.yaml
@@ -10,7 +10,7 @@
   jobs:
     main:
       name: NFS Deployment Restart - Deployment Restart
-      runs-on: [home-ops-runner]
+      runs-on: ${{ format('home-ops-runner-{0}', matrix.cluster) }}
       strategy:
         matrix:
           cluster: ["main"]
