--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -93,56 +93,20 @@ jobs:
   pull:
     if: ${{ needs.pre-job.outputs.any_changed == 'true' && needs.compare.outputs.images != '[]' }}
     name: Image Pull - Pull Images
-    runs-on: home-ops-runner
+    runs-on: ${{ format('home-ops-runner-{0}', matrix.cluster) }}
     needs: ["pre-job", "compare"]
     strategy:
       matrix:
-        images: ${{ fromJSON(needs.compare.outputs.images) }}
         cluster: ["main", "utility"]
+        images: ${{ fromJSON(needs.compare.outputs.images) }}
       max-parallel: 4
       fail-fast: false
     steps:
-      - name: Uppercase Cluster Name
-        run: |
-          cluster="${{ matrix.cluster }}"
-          echo "cluster=${cluster^^}" >> $GITHUB_ENV
-
-      - name: Configure 1password
-        uses: 1password/load-secrets-action/configure@v2
-        with:
-          connect-host: ${{ secrets.OP_CONNECT_HOST}}
-          connect-token: ${{ secrets.OP_CONNECT_TOKEN }}
-
-      - name: Get Secrets
-        uses: 1password/load-secrets-action@v2
-        with:
-          export-env: true
-        env:
-          TALOSCONFIG_BASE64: op://Kubernetes/kubernetes/TALOSCONFIG_${{ env.cluster }}_BASE64
-
-      - name: Write talosconfig
-        id: talosconfig
-        uses: timheuer/base64-to-file@v1
-        with:
-          encodedString: "${{ env.TALOSCONFIG_BASE64 }}"
-          fileName: talosconfig
-
       - name: Install talosctl
         run: curl -fsSL https://talos.dev/install | sh
 
       - name: Pull Image
-        env:
-          TALOSCONFIG: ${{ steps.talosconfig.outputs.filePath }}
-        run: |
-          NODE=$(talosctl config info --output json | jq --raw-output '.nodes[]' | shuf -n 1)
-          BASE_IMAGE=$(echo ${{ matrix.images }} | sed 's/:.*//')
-
-          if ! talosctl -n $NODE image list | grep -q $BASE_IMAGE; then
-            echo "Base image $BASE_IMAGE is not pulled, pulling ${{ matrix.images }} now."
-            talosctl -n $NODE image pull ${{ matrix.images }}
-          else
-            echo "Base image $BASE_IMAGE is already pulled on the node, skipping pull for ${{ matrix.images }}."
-          fi
+        run: talosctl --nodes $NODE image pull ${{ matrix.images }}
 
   status:
     if: ${{ always() }}
