--- a/.github/workflows/schemas.yaml
+++ b/.github/workflows/schemas.yaml
@@ -17,7 +17,7 @@ env:
 jobs:
   main:
     name: Schemas
-    runs-on: [home-ops-runner]
+    runs-on: [home-ops-runner-main]
     permissions:
       contents: read
       packages: write
