--- a/.github/workflows/flux-hr-sync.yaml
+++ b/.github/workflows/flux-hr-sync.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       any_changed: ${{ steps.changed-files.outputs.any_changed }}
-      all_changed_and_modified_files: ${{ steps.changed-files.outputs.all_changed_and_modified_files }}
+      all_changed_files: ${{ steps.changed-files.outputs.all_changed_files }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
         env:
           FILTER: '[.spec.chart.spec.sourceRef] | map_values("\(.namespace),\(.name)") | unique'
         run: |
-          repos=$(yq --indent 0 --output-format json eval-all "${FILTER}" ${{ needs.pre-job.outputs.all_changed_and_modified_files }})
+          repos=$(yq --indent 0 --output-format json eval-all "${FILTER}" ${{ needs.pre-job.outputs.all_changed_files }})
           echo "repos=${repos}" >> $GITHUB_OUTPUT
 
           echo '## Helm Repos' >> $GITHUB_STEP_SUMMARY
